{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 24,
  "lineage": "4feedd9c-528b-4a55-43f0-95b44a760d4b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "website",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-2e8a5b18c969/zones/us-central1-a/instanceGroups/instance-group-all",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-02-29T06:46:26.639-08:00",
            "description": "Our company website",
            "enable_cdn": false,
            "fingerprint": "F40Momwc1cI=",
            "generated_id": -1152571859,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-2e8a5b18c969/global/httpHealthChecks/armor-healthcheck"
            ],
            "id": "projects/qwiklabs-gcp-00-2e8a5b18c969/global/backendServices/armor-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "armor-backend",
            "port_name": "http",
            "project": "qwiklabs-gcp-00-2e8a5b18c969",
            "protocol": "HTTP",
            "security_policy": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-2e8a5b18c969/global/securityPolicies/armor-security-policy",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-2e8a5b18c969/global/backendServices/armor-backend",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_http_health_check.health",
            "google_compute_instance.cluster1",
            "google_compute_instance_group.webservers",
            "google_compute_security_policy.security-policy-1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "cluster1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "43",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-29T06:45:24.185-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-00-2e8a5b18c969/global/firewalls/armor-firewall",
            "log_config": [],
            "name": "armor-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-2e8a5b18c969/global/networks/default",
            "priority": 1000,
            "project": "qwiklabs-gcp-00-2e8a5b18c969",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-2e8a5b18c969/global/firewalls/armor-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/qwiklabs-gcp-00-2e8a5b18c969/global/forwardingRules/armor-rule",
            "ip_address": "34.49.238.178",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "armor-rule",
            "port_range": "80-80",
            "project": "qwiklabs-gcp-00-2e8a5b18c969",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-2e8a5b18c969/global/forwardingRules/armor-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-2e8a5b18c969/global/targetHttpProxies/armor-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.website",
            "google_compute_http_health_check.health",
            "google_compute_instance.cluster1",
            "google_compute_instance_group.webservers",
            "google_compute_security_policy.security-policy-1",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "cluster1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20240213",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-2e8a5b18c969/zones/us-central1-a/disks/armor-gce-96037bfb"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-00-2e8a5b18c969/zones/us-central1-a/instances/armor-gce-96037bfb",
            "instance_id": "4390180474917299817",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "0xF9CUJlKl4=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq nginx; sudo service nginx restart",
            "name": "armor-gce-96037bfb",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.170.200.37",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-2e8a5b18c969/global/networks/default",
                "network_ip": "10.128.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-2e8a5b18c969/regions/us-central1/subnetworks/default",
                "subnetwork_project": "qwiklabs-gcp-00-2e8a5b18c969"
              }
            ],
            "project": "qwiklabs-gcp-00-2e8a5b18c969",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-2e8a5b18c969/zones/us-central1-a/instances/armor-gce-96037bfb",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "security-policy-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "example security policy",
            "fingerprint": "jwq-ydnCaWw=",
            "id": "projects/qwiklabs-gcp-00-2e8a5b18c969/global/securityPolicies/armor-security-policy",
            "name": "armor-security-policy",
            "project": "qwiklabs-gcp-00-2e8a5b18c969",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "allow traffic from 192.0.2.0/24",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "192.0.2.0/24"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 1000,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Default rule, higher priority overrides it",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-2e8a5b18c969/global/securityPolicies/armor-security-policy",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-29T06:47:15.076-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/qwiklabs-gcp-00-2e8a5b18c969/global/targetHttpProxies/armor-proxy",
            "name": "armor-proxy",
            "project": "qwiklabs-gcp-00-2e8a5b18c969",
            "proxy_bind": false,
            "proxy_id": -1152571876,
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-2e8a5b18c969/global/targetHttpProxies/armor-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-2e8a5b18c969/global/urlMaps/armor-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.website",
            "google_compute_http_health_check.health",
            "google_compute_instance.cluster1",
            "google_compute_instance_group.webservers",
            "google_compute_security_policy.security-policy-1",
            "google_compute_url_map.default",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-29T06:47:02.440-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-2e8a5b18c969/global/backendServices/armor-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "zhPxt2gYPZU=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "mysite.com"
                ],
                "path_matcher": "allpaths"
              }
            ],
            "id": "projects/qwiklabs-gcp-00-2e8a5b18c969/global/urlMaps/armor-url-map",
            "map_id": -1152571895,
            "name": "armor-url-map",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-2e8a5b18c969/global/backendServices/armor-backend",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "allpaths",
                "path_rule": [
                  {
                    "paths": [
                      "/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-2e8a5b18c969/global/backendServices/armor-backend",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "qwiklabs-gcp-00-2e8a5b18c969",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-2e8a5b18c969/global/urlMaps/armor-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.website",
            "google_compute_http_health_check.health",
            "google_compute_instance.cluster1",
            "google_compute_instance_group.webservers",
            "google_compute_security_policy.security-policy-1",
            "random_id.instance_id"
          ]
        }
      ]
    }
  ]
}